added a massive stop list for concept feature. emoji mapping available at /sys/emoji. SummarizeFeature (project thalams) working beautifully with graph walks from claims to messages to concepts to messages to claims. Agents are very happy with it -- a few good critiques I still want to incorprate.